--- a/Dissertation/sections/intro.tex
+++ b/Dissertation/sections/intro.tex
@@ -31,11 +31,11 @@ To summarise, the main objectives of the project were:
 
 \section{Results Achieved}
 
-Initially the results seemed optimistic as the RMSE values for the healthy, MCI and Alzheimer's patients showed that the model was less accurate when applied to diseased patients as hypothesised and that the magnitude of failure was worse for the more severely affected Alzheimer's group than for those with MCI, which was also as expected. However, the RMSE value of the model on healthy patients was still relatively high with the estimates having a mean of 14.86 years and a standard deviation of 2.68 years (note that this is the standard deviation of the sampling distribution and thus is equivalent to the standard error of the RMSE statistic).
+Initially the results seemed optimistic as the RMSE values for the healthy, MCI and Alzheimer's patients showed that the model was less accurate when applied to diseased patients as hypothesised and that the magnitude of failure was worse for the more severely affected Alzheimer's group than for those with MCI, which was also as expected. However, the RMSE value of the model on healthy patients was still relatively high with the estimates having a mean of 14.86 years and a standard deviation of 2.68 years (note that this is the standard deviation of the sampling distribution and thus is equivalent to the standard error of the RMSE statistic). The residuals of the model (i.e. the deviation between the predicted and actual age) only correlated weakly with the magnitude of cognitive impairment as measured by cognitive test scores (MMSE scores).
 
 However, subsequent projections of the data were worrying as the classes did not appear to be separable, neither by age within a class nor between classes as a whole. This implied that perhaps the relative powers would not allow us to distinguish between the healthy subjects and diseased patients, and thus the model based on them would also lack such discriminative ability. 
 
-This was corroborated by the classifier results which were no better than a 'dumb' classifier which simply predicts all subjects to be healthy irrespective of the data. However, given that the data processing pipeline from raw MEG signal to feature vector is very long and involves many variables such as how to perform the artefact detection, filtering, whether to include noisier signals etc. this study does not prove that the relative powers are unable to distinguish between the disease states.
+This was corroborated by the classifier results which were no better than a `dumb' classifier which simply predicts all subjects to be healthy irrespective of the data. However, given that the data processing pipeline from raw MEG signal to feature vector is very long and involves many variables such as how to perform the artefact detection, filtering, whether to include noisier signals etc. this study does not prove that the relative powers are unable to distinguish between the disease states.
 
 It is possible that careful tweaking of the pipeline would result in success. However, as a preliminary study it demonstrates that such a task is likely to be difficult.
 
