--- a/Dissertation/sections/methodology.tex
+++ b/Dissertation/sections/methodology.tex
@@ -8,10 +8,10 @@ Most of the data for the healthy control patients was in the same format of a te
 
 Eleven of the data files were corrupted. Initially it seemed that that it would be possible to still use these subjects - using interpolation to deal with the missing data and rejecting the epochs where the interpolation was used to remove any effect upon the final data. However this ended up being very time-consuming as some of the data had multiple corruptions and some was so corrupted that even attempted to partially load the data failed. Therefore as the eleven subjects represented less than 5\% of the total 233 healthy controls it was decided that it wasn't worth the time it would take to recover the data.
 
-Almost all of the data had been downsampled at acquistion, however for reasons that remain unknown, three uncorrupted subjects and one of the corrupted ones had not been downsampled. As the desired sampling rate was known however, it was easy to downsample these subjects using the \texttt{decimate} function in MATLAB, this automatically filters the data first to satisfy the Nyquist criterion and avoid aliasing.
+Almost all of the data had been downsampled at acquisition, however for reasons that remain unknown, three uncorrupted subjects and one of the corrupted ones had not been downsampled. As the desired sampling rate was known however, it was easy to downsample these subjects using the \texttt{decimate} function in MATLAB, this automatically filters the data first to satisfy the Nyquist criterion and avoid aliasing.
 
 The \textit{Nyquist criterion} in this context refers to the requirement that the highest frequency contained in the signal is less than half of the sampling rate. If this is not the case then \textit{aliasing} will occur in which the frequency of the sampled signal does not match the frequency of the original continuous signal. This loss of information means that accurate reconstruction of the original signal is impossible. Thus prior to downsampling (reducing the sample rate), the signal is first passed through a low-pass filter with a threshold at the Nyquist frequency ($\frac{1}{2}$ of the new downsampled sampling rate) so that aliasing does not occur. \cite{Smith1999} 
-It was decided to use the FieldTrip MATLAB library\cite{Oostenveld2011} designed for EEG/MEG analysis. This would make the artefact rejection easier to perform in a more rigorous and standardised manner. Unfortunately the FieldTrip library expected the data in the format output by the original MEG machine and not the format in which we had recieved the data. After many attempts to load the data it appeared it would not be successful and so we produced our own artefact rejection scripts in MATLAB. This proved to be unnecessary as following a discussion with the Cognitive and Computational Neuroscience group at the Centro de Tecnolog\`{i}a Biom\'{e}dica (CTB), Madrid we discovered that it was possible to 'trick' Fieldtrip into loading the data provided one could provide a data header file with correct sensor information from an actual MEG machine. As the group could provide us with such a file we were then able to successfully load the data into FieldTrip and thus use it for the artefact rejection and signal processing.
+It was decided to use the FieldTrip MATLAB library\cite{Oostenveld2011} designed for EEG/MEG analysis. This would make the artefact rejection easier to perform in a more rigorous and standardised manner. Unfortunately the FieldTrip library expected the data in the format output by the original MEG machine and not the format in which we had received the data. After many attempts to load the data it appeared it would not be successful and so we produced our own artefact rejection scripts in MATLAB. This proved to be unnecessary as following a discussion with the Cognitive and Computational Neuroscience group at the Centro de Tecnolog\`{i}a Biom\'{e}dica (CTB), Madrid we discovered that it was possible to `trick' Fieldtrip into loading the data provided one could provide a data header file with correct sensor information from an actual MEG machine. As the group could provide us with such a file we were then able to successfully load the data into FieldTrip and thus use it for the artefact rejection and signal processing.
 
 The age of the subjects (and MMSE scores for the diseased patients) were stored across various different Excel spreadsheets. As these had been compiled by hand there were some typos in the filenames and differing conventions that made it impossible to fully automate the process of extracting the data into MATLAB. However it was possible to semi-automate it such that only the filenames that didn't match an entry in the spreadsheet required further inspection, reducing the number of files to check from 220 to around 40 and thus significantly reducing the time required.
 
@@ -118,7 +118,7 @@ The residuals of the model fit demonstrate the difference between the predicted 
   \centering
     \includegraphics[width=\textwidth]{cogscorecorrel.pdf}
     \caption{The MMSE score plotted against the residuals of the model, the lines of best fit are plotted for each group. The black line is the line of best fit for the two groups combined. The correlations are very weak: the $r^2$ statistics are 0.0146 for the AD group (blue), 0.0168 for the MCI group (red) and 0.0060 for the two groups combined (black)}
-    \label{fig:cogscorecorel}
+    \label{fig:cogscorecorrel}
 \end{figure}
 
 
@@ -134,7 +134,7 @@ As the data consisted of 30 features (6 spectral bands $\times$ 5 sensor regions
 
 t-Distributed Stochastic Neighbour Embedding (t-SNE)\cite{Maaten2008} is a data visualisation technique that maps the original high dimensional space of the data to a lower dimensional space (usually two-dimensional by default) to allow the data to be visualised. For example, one may produce a scatter plot of the high-dimensional data once it has been projected into two-dimensions. t-SNE reduced the dimensionality of the data whilst trying to retain as much of the high-dimensional structure as possible.
 
- It does this by computing a similarity metric between each pair of points by centering a Gaussian on one of the points in the high-dimensional space and using the probability density as the similarity metric. A Student's t-distribution with a single degree of freedom is used in the lower dimensional space in order to provide a more convenient cost function and avoid the \textit{crowding problem} due to insufficient area in the low dimensional space to accommodate all the nearby data points whilst retaining an accurate model of small distances. The differences between the similarity metrics in the high-dimensional space and the low-dimensional map are minimised as measured by the Kullbeck-Liebler divergence.\cite{Maaten2008}
+ It does this by computing a similarity metric between each pair of points by centering a Gaussian on one of the points in the high-dimensional space and using the probability density as the similarity metric. A Student's t-distribution with a single degree of freedom is used in the lower dimensional space in order to provide a more convenient cost function and avoid the \textit{crowding problem} due to insufficient area in the low dimensional space to accommodate all the nearby data points whilst retaining an accurate model of small distances. The differences between the similarity metrics in the high-dimensional space and the low-dimensional map are minimised as measured by the Kullback-Leibler divergence.\cite{Maaten2008}
 
  Thus t-SNE has the advantages that it is able to faithfully retain both the small-scale local structure of the high-dimensional data and the long-range global structure combined with a cost function that is easier to compute than traditional SNE which used Gaussian distributions in both the high and low dimensional spaces.\cite{Maaten2008}
 
@@ -149,7 +149,7 @@ t-Distributed Stochastic Neighbour Embedding (t-SNE)\cite{Maaten2008} is a data 
 \end{figure}
 
 
-t-SNE plots of each class (healthy, MCI or AD) with the samples separated by age were produced to see if within a disease group the age could be distinguished. This resulted in Figures \ref{htsneplot}, \ref{mcitsneplot} and \ref{alztsneplot}. As can be seen in the plots the different age groups were not separable and so it does not seem as though the relative powers gave much information about age when excluding the effects of disease.
+t-SNE plots of each class (healthy, MCI or AD) with the samples separated by age were produced to see if within a disease group the age could be distinguished. This resulted in Figures \ref{fig:htsneplot}, \ref{fig:mcitsneplot} and \ref{fig:alztsneplot}. As can be seen in the plots the different age groups were not separable and so it does not seem as though the relative powers gave much information about age when excluding the effects of disease.
 
 
 \begin{figure}[h!]
@@ -320,15 +320,15 @@ We can observe some differences between the age groups which perhaps explains wh
 
 \section{Classification}
 
-It was desired to classify a given subject as either healthy, suffering from MCI or suffering from Alzheimer's. This is an example of a \textit{supervised learning} problem as we have a fully labelled training and test set. As we have three classes it is \textit{multi-class classfication} as opposed to the more common \textit{binary classification} problem when one has only two classes. Any multi-class classification problem can be decomposed into several binary classification problem by training the same number of binary classifiers as classes with labels that are 1 for a certain class and 0 for all other classes. The test set is then classified according to which binary classifier most confidently predicted a value of 1. \cite{Witten2011}
+It was desired to classify a given subject as either healthy, suffering from MCI or suffering from Alzheimer's. This is an example of a \textit{supervised learning} problem as we have a fully labelled training and test set. As we have three classes it is \textit{multi-class classification} as opposed to the more common \textit{binary classification} problem when one has only two classes. Although any multi-class classification problem can be decomposed into several binary classification problem by training the same number of binary classifiers as classes with labels that are 1 for a certain class and 0 for all other classes. The test set is then classified according to which binary classifier most confidently predicted a value of 1. (One vs. All Classification) \cite{Witten2011}
 
-RUSBoost was chosen as the classification algorithm because it is a ensemble multiclass classification algorithm that is robust to skewed classes in which the proportions of the classes present in the dataset is imbalanced.\cite{Seifert2010} The data we have suffers from class imbalance as shown in Table \ref{tab:classimbalance} It is essentially an extension of the highly popular AdaBoost algorithm which uses adaptive boosting for classification and has been extended from binary to multiclass classification by the AdaBoost.M1 algorithm\cite{Witten2011}.
+RUSBoost was chosen as the classification algorithm because it is a ensemble multiclass classification algorithm that is robust to skewed classes in which the proportions of the classes present in the dataset is imbalanced.\cite{Seiffert2010} The data we have suffers from class imbalance as shown in Table \ref{tab:classimbalance} It is essentially an extension of the highly popular AdaBoost algorithm which uses adaptive boosting for classification and has been extended from binary to multiclass classification by the AdaBoost.M1 algorithm\cite{Witten2011}.
 
-Adaptive boosting is an ensemble method which trains a series of weak learners and then uses a combination of their output (such as voting for classification) to classify the new sample. It is adaptive because each new weak classifier that is introduced is trained on a weighted training set and the weights are adjusted according to the success rate of previous classifers on the samples. Therefore data samples which have not yet been classified correctly are given a high weight so that future classifiers will learn to classify them properly - this has the advantage that the combined strong classifier will know how to classify any data that is similar to that in the training set, but it also makes the algorithm highly sensitive to outliers.\cite{Witten2011}
+Adaptive boosting is an ensemble method which trains a series of weak learners and then uses a combination of their output (such as voting for classification) to classify the new sample. It is adaptive because each new weak classifier that is introduced is trained on a weighted training set and the weights are adjusted according to the success rate of previous classifiers on the samples. Therefore data samples which have not yet been classified correctly are given a high weight so that future classifiers will learn to classify them properly - this has the advantage that the combined strong classifier will know how to classify any data that is similar to that in the training set, but it also makes the algorithm highly sensitive to outliers.\cite{Witten2011}
 
 To address class imbalance there are two possible strategies, one can either \textit{oversample} the minority classes  (e.g. sampling with replacement as in bootstrapping, creating synthetic data via interpolation of minority samples etc.) or one can \textit{undersample} the majority set (e.g. randomly leave out some of the majority class samples) until the desired class proportions are reached in the sample set.
 
-RUSBoost utilises Random UnderSampling whereas an alternative SMOTEBoost uses Synthetic Minority Oversampling Technique (i.e. creating synthetic data by interpolation as mentioned previously). RUSBoost has been shown to have equal or better performance than SMOTEBoost with the additional advantages that as it uses a smaller training set it is quicker to train and as it doesn't require the generation of synthetic data is is much less computationally complex, this means that it is more efficient whilst still achieving an equal or better rate of classification accuracy. \cite{Seifert2010}
+RUSBoost utilises Random UnderSampling whereas an alternative SMOTEBoost uses Synthetic Minority Oversampling Technique (i.e. creating synthetic data by interpolation as mentioned previously). RUSBoost has been shown to have equal or better performance than SMOTEBoost with the additional advantages that as it uses a smaller training set it is quicker to train and as it doesn't require the generation of synthetic data is is much less computationally complex, this means that it is more efficient whilst still achieving an equal or better rate of classification accuracy. \cite{Seiffert2010}
 
 \begin{table}[h!]
 \begin{center}
